--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "author": "Diegodkid",
   "license": "MIT",
   "dependencies": {
+    "google-spreadsheet": "^3.2.0",
+    "moment": "^2.29.1",
     "next": "^12.0.7",
     "postcss-import": "^14.0.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "swr": "^1.1.2-beta.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
