--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Diegodkid",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "google-spreadsheet": "^3.2.0",
     "moment": "^2.29.1",
     "next": "^12.0.7",
